--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.7.1",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
@@ -22,8 +23,12 @@
     "@mikro-orm/core": "^4.5.9",
     "@mikro-orm/migrations": "^4.5.9",
     "@mikro-orm/postgresql": "^4.5.9",
+    "apollo-server-express": "^3.3.0",
     "dotenv": "^10.0.0",
-    "pg": "^8.7.1"
+    "express": "^4.17.1",
+    "graphql": "^15.5.1",
+    "pg": "^8.7.1",
+    "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
     "useTsNode": true,
