--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "tsc -w",
-    "start": "node dist/index.js",
-    "dev": "nodemon dist/index.js"
+    "ts": "tsc -w",
+    "start": "nodemon dist/index.js"
   },
   "keywords": [],
   "author": "",
